cargo-features = ["edition"]

[package]
name = "maple-stdweb-ui"
version = "0.1.0"
authors = ["Andrey Tkachenko <andreytkachenko64@gmail.com>"]
edition = "2018"

[dependencies]
maple-core = {path = "../maple-core"}
maple-stdweb = {path = "../maple-stdweb"}
maple-stdui = {path = "../maple-stdui"}
maple-macro = {path = "../maple-macro"}
maple-stdweb-ui = {path = "../maple-stdweb-ui"}