cargo-features = ["edition"]

[package]
name = "maple"
version = "0.1.0"
authors = ["Andrey Tkachenko <andreytkachenko64@gmail.com>"]
edition = "2018"

[dependencies]
maple-core = {path = "../maple-core"}
maple-macro = {path = "../maple-macro"}
maple-stdui = {path = "../maple-stdui"}
maple-stdweb = {path = "../maple-stdweb"}